--- a/taskpane.html
+++ b/taskpane.html
@@ -13,7 +13,7 @@
 <body class="ms-Fabric" dir="ltr">
     <div class="px-card">
         <div class="px-header">
-            <img src="../assets/logo-proximus6.png" alt="Proximus Logo" class="px-logo" />
+            <img src="assets/logo-proximus6.png" alt="Proximus Logo" class="px-logo" />
             <div class="px-title">OA Meeting Room Assistant</div>    
         </div>
         <div class="px-section" style="text-align:right">
