--- a/taskpane.html
+++ b/taskpane.html
@@ -138,6 +138,6 @@
         </div>
     </div>
 	<script src="config.js"></script>
-    <script src="taskpane.js"></script>
+    <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/taskpane.js"></script>
 </body>
 </html>
