--- a/Dev/Roberto/taskpaneDev.html
+++ b/Dev/Roberto/taskpaneDev.html
@@ -7,7 +7,7 @@
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
     <title>OA Meeting Assistant</title>
     <link rel="stylesheet" href="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-core/11.0.0/css/fabric.min.css">
-    <link rel="stylesheet" href="taskpane.css" />
+    <link rel="stylesheet" href="https://robertocampione.github.io/OAMeetingAssistant/taskpane.css" />
     
 </head>
 <body class="ms-Fabric" dir="ltr">
