--- a/attendanceDevRoberto.html
+++ b/attendanceDevRoberto.html
@@ -9,6 +9,6 @@
     <script src="https://robertocampione.github.io/OAMeetingAssistant/commandsAttendance.js" type="text/javascript"></script>
 </head>
 <body>
-<!-- NOTE: The body is empty on purpose. Since this is invoked via a button, there is no UI to render. -->
+<!-- NOTE: The body is empty on purpose. Since this is invoked via a button, there is no UI to render.. -->
 </body>
 </html>
