--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
         </div>
     </div>
-	<script src="https://robertocampione.github.io/OAMeetingAssistant/config.js"></script>
-    <script src="https://robertocampione.github.io/OAMeetingAssistant/taskpane.js"></script>
+	<script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/config.js"></script>
+    <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/taskpane.js"></script>
 </body>
 </html>
