--- a/attendance.html
+++ b/attendance.html
@@ -6,7 +6,7 @@
     <title></title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
     <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/config.js" type="text/javascript"></script>
-    <script src="https://yellow-desert-0566f271e.6.azurestaticapps.net/commandsAttendance.js" type="text/javascript"></script>
+    <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/commandsAttendance.js" type="text/javascript"></script>
 </head>
 <body>
 <!-- NOTE: The body is empty on purpose. Since this is invoked via a button, there is no UI to render. -->
