--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -130,6 +130,9 @@
               <button id="backBtn" class="ms-Button">
                 <span class="ms-Button-label">Back</span>
               </button>
+              <button id="closeEventPlannerWindow" class="ms-Button">
+                <span class="ms-Button-label">Close</span>
+              </button>
             </div>
             <div style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; color:#888; font-size:0.85em;">
               Disclaimer: Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat.
