--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -34,10 +34,12 @@
                   <option value="Liegi">Liegi</option>
                 </select>
               </div>
-              <div class="px-section" style="max-width:200px;">
-                <label class="ms-Label" for="businessUnit">Business Unit</label>
-                <input type="text" id="businessUnit" name="businessUnit" value="DTI" style="width:50%;" maxlength="30">
-              </div>
+
+		<div class="px-section" style="max-width:200px;">
+		  <label class="ms-Label" for="businessUnit">Business Unit</label>
+		  <input type="text" id="businessUnit" name="businessUnit" placeholder="Loading..." style="width:50%;" maxlength="30">
+		</div>
+
               <div class="px-section">
                 <div class="ms-Label">Room Amenities</div>
                 <div class="checkbox-group" style="display:flex; gap:14px;">
