--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -142,6 +142,18 @@
           </div>
         </div>
     </div>
+
+    <!-- Overlay for closing confirmation -->
+    <div id="closeConfirmOverlay" class="close-overlay" style="display:none;">
+      <div class="confirm-box">
+        <p>✅ Reservation Confirmed.</p>
+        <p>✅ Initial Meeting Room Reserved.</p>
+        <p>✅ All Attendees Informed.</p>
+        <p style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; font-size:0.85em;">Now you can Press <strong>YES</strong> to Close and Discard.</p>
+        <button id="confirmCloseYes" class="ms-Button ms-Button--primary"><span class="ms-Button-label">Yes</span></button>
+        <button id="confirmCloseNo" class="ms-Button"><span class="ms-Button-label">No</span></button>
+      </div>
+    </div>
 	<script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
    	<script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
 </body>
