fix html property position

--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -83,8 +83,8 @@
                   </div>
                 </div>
               </div>
-              <button class="ms-Button ms-Button--primary" id="generateJson" type="button" style="margin-top: 16px; width: 100%;">
-                <span data-i18n="reserve-meeting-room-button" class="ms-Button-label">Add your meeting room</span>
+              <button data-i18n="reserve-meeting-room-button" class="ms-Button ms-Button--primary" id="generateJson" type="button" style="margin-top: 16px; width: 100%;">
+                <span class="ms-Button-label">Add your meeting room</span>
               </button>
               <pre id="jsonOutput"></pre>
             </form>
