--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -41,7 +41,7 @@
 		</div>
 		    
 		<div class="px-section">
-			<div class="ms-Label">Room Amenities</div>
+			<div class="ms-Label">Room Amenities Test</div>
 			  <div id="amenitiesContainer" class="checkbox-group" style="display:flex; gap:14px;">
 			    <!-- Checkboxes will be dynamically loaded here -->
 			  </div>
