--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -19,7 +19,7 @@
         <div class="px-section" style="text-align:right">
           <label class="ms-Toggle">
             <input type="checkbox" id="devModeToggle">
-            <span class="ms-Toggle-field">DEV mode</span>
+            <span class="ms-Toggle-field">DEV mode Test</span>
           </label>
         </div>
         <div class="px-content">
@@ -41,7 +41,7 @@
 		</div>
 		    
 		<div class="px-section">
-			<div class="ms-Label">Room Amenities Test</div>
+			<div class="ms-Label">Room Amenities</div>
 			  <div id="amenitiesContainer" class="checkbox-group" style="display:flex; gap:14px;">
 			    <!-- Checkboxes will be dynamically loaded here -->
 			  </div>
