--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -19,7 +19,7 @@
         <div class="px-section" style="text-align:right">
           <label class="ms-Toggle">
             <input type="checkbox" id="devModeToggle">
-            <span class="ms-Toggle-field">DEV mode Test</span>
+            <span class="ms-Toggle-field">DEV mode</span>
           </label>
         </div>
         <div class="px-content">
