--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -97,7 +97,7 @@
             <input type="hidden" id="confirmIcalUid" />
             <input type="hidden" id="organizerResponse" />
             <div class="ms-font-m-plus" id="confirmationMessage" style="margin-bottom:16px;">
-              <span>A placeholder has been created and the meeting room</span> 
+              <span data-i18n="placeholder.message">A placeholder has been created and the meeting room</span> 
               <span style="color:#5C2D91;font-weight:600" id="placeholderRoomName"></span>
               <span data-i18n="15.minutes.confirmation">is reserved for 15 minutes.</span>
 
