--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -17,6 +17,13 @@
             <div data-i18n="app.title" class="px-title">OA Meeting Room Assistant</div>    
         </div>
         <div class="px-section" style="text-align:right">
+            
+        <div id="language-bar">
+            <a href="#" id="link-en">EN</a> |
+            <a href="#" id="link-nl">NL</a> |
+            <a href="#" id="link-fr">FR</a>
+          </div>
+
           <label class="ms-Toggle">
             <input type="checkbox" id="devModeToggle">
             <span class="ms-Toggle-field">DEV mode</span>
