--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -19,9 +19,9 @@
         <div class="px-section" style="text-align:right">
             
         <div id="language-bar">
-            <a href="#" id="link-en">EN</a> |
-            <a href="#" id="link-nl">NL</a> |
-            <a href="#" id="link-fr">FR</a>
+            <a href="#" id="link-en" data-lang="en">EN</a> |
+            <a href="#" id="link-nl" data-lang="nl">NL</a> |
+            <a href="#" id="link-fr" data-lang="fr">FR</a>
           </div>
 
           <label class="ms-Toggle">
