--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -18,9 +18,13 @@
         </div>
         <div class="px-section" style="text-align:right">
         <div id="language-bar">
-            <a href="#" id="link-en" data-lang="en"><img src="assets/en.svg" alt="English"></a>
-            <a href="#" id="link-nl" data-lang="nl"><img src="assets/nl.svg" alt="Dutch"></a>
-            <a href="#" id="link-fr" data-lang="fr"><img src="assets/fr.svg" alt="French"></a>
+            <a href="#" id="link-en" data-lang="en">EN</a> |
+            <a href="#" id="link-nl" data-lang="nl">NL</a> |
+            <a href="#" id="link-fr" data-lang="fr">FR</a>
+
+<!--             <a href="#" id="link-en" data-lang="en"><img src="assets/en.svg" alt="English">en</a>
+            <a href="#" id="link-nl" data-lang="nl"><img src="assets/nl.svg" alt="Dutch">nl</a>
+            <a href="#" id="link-fr" data-lang="fr"><img src="assets/fr.svg" alt="French">fr</a> -->
           </div>
           <label class="ms-Toggle">
             <input type="checkbox" id="devModeToggle">
