--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -18,13 +18,22 @@
         </div>
         <div class="px-section" style="text-align:right">
         <div id="language-bar">
-            <a href="#" id="link-en" data-lang="en"><span><img src="assets/en.svg" alt="English"></span>EN</a> |
-            <a href="#" id="link-nl" data-lang="nl"><span><img src="assets/nl.svg" alt="Dutch"></span>NL</a> |
-            <a href="#" id="link-fr" data-lang="fr"><span><img src="assets/fr.svg" alt="French"></span>FR</a>
+<!--             <a href="#" id="link-en" data-lang="en"><span><img src="assets/en.svg" alt="English"></span>EN</a>
+            <a href="#" id="link-nl" data-lang="nl"><span><img src="assets/nl.svg" alt="Dutch"></span>NL</a>
+            <a href="#" id="link-fr" data-lang="fr"><span><img src="assets/fr.svg" alt="French"></span>FR</a> -->
 
-<!--        <a href="#" id="link-en" data-lang="en"><img src="assets/en.svg" alt="English">en</a>
-            <a href="#" id="link-nl" data-lang="nl"><img src="assets/nl.svg" alt="Dutch">nl</a>
-            <a href="#" id="link-fr" data-lang="fr"><img src="assets/fr.svg" alt="French">fr</a> -->
+            
+            <div id="language-bar">
+              <a href="#" id="link-en" data-lang="en">
+                <span><img src="assets/en.svg" alt="English"></span> EN
+              </a>
+              <a href="#" id="link-nl" data-lang="nl">
+                <span><img src="assets/nl.svg" alt="Dutch"></span> NL
+              </a>
+              <a href="#" id="link-fr" data-lang="fr">
+                <span><img src="assets/fr.svg" alt="French"></span> FR
+              </a>
+            </div>
           </div>
           <label class="ms-Toggle">
             <input type="checkbox" id="devModeToggle">
