--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -18,20 +18,15 @@
         </div>
         <div class="px-section" style="text-align:right">
         <div id="language-bar">
-<!--             <a href="#" id="link-en" data-lang="en"><span><img src="assets/en.svg" alt="English"></span>EN</a>
-            <a href="#" id="link-nl" data-lang="nl"><span><img src="assets/nl.svg" alt="Dutch"></span>NL</a>
-            <a href="#" id="link-fr" data-lang="fr"><span><img src="assets/fr.svg" alt="French"></span>FR</a> -->
-
-            
             <div id="language-bar">
               <a href="#" id="link-en" data-lang="en">
-                <span><img src="assets/en.svg" alt="English"></span> EN
+                <span><img src="assets/en.svg" alt="English"></span>
               </a>
               <a href="#" id="link-nl" data-lang="nl">
-                <span><img src="assets/nl.svg" alt="Dutch"></span> NL
+                <span><img src="assets/nl.svg" alt="Dutch"></span>
               </a>
               <a href="#" id="link-fr" data-lang="fr">
-                <span><img src="assets/fr.svg" alt="French"></span> FR
+                <span><img src="assets/fr.svg" alt="French"></span>
               </a>
             </div>
           </div>
