--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -20,13 +20,13 @@
         <div id="language-bar">
             <div id="language-bar">
               <a href="#" id="link-en" data-lang="en">
-                <span><img src="assets/en.svg" alt="English"></span>
+                <img src="assets/en.svg" alt="English">
               </a>
               <a href="#" id="link-nl" data-lang="nl">
-                <span><img src="assets/nl.svg" alt="Dutch"></span>
+                <span><img src="assets/nl.svg" alt="Dutch">
               </a>
               <a href="#" id="link-fr" data-lang="fr">
-                <span><img src="assets/fr.svg" alt="French"></span>
+                <img src="assets/fr.svg" alt="French">
               </a>
             </div>
           </div>
