--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -23,7 +23,7 @@
                 <img src="assets/en.svg" alt="English">
               </a>
               <a href="#" id="link-nl" data-lang="nl">
-                <span><img src="assets/nl.svg" alt="Dutch">
+                <img src="assets/nl.svg" alt="Dutch">
               </a>
               <a href="#" id="link-fr" data-lang="fr">
                 <img src="assets/fr.svg" alt="French">
