--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -128,7 +128,7 @@
                 <span data-i18n="cancel.button" class="ms-Button-label">Cancel</span>
               </button>
             </div>
-            <div id="confirmationStatus" style="margin-top:24px;min-height:24px;font-size:1.08em;"></div>
+            <div id="confirmationStatus" data-i18n="confirmation.message" style="margin-top:24px;min-height:24px;font-size:1.08em;"></div>
             <div id="backBtnDiv" style="display:none; margin-top:20px;">
               <button id="backBtn" class="ms-Button">
                 <span data-i18n="back.button" class="ms-Button-label">Back</span>
