--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -19,13 +19,13 @@
         <div class="px-section" style="text-align:right">
         <div id="language-bar">
             <div id="language-bar">
-              <a href="#" id="link-en" data-lang="en">
+              <a href="#" id="link-en" data-lang="en-nav">
                 <img src="assets/en.svg" alt="English">
               </a>
-              <a href="#" id="link-nl" data-lang="nl">
+              <a href="#" id="link-nl" data-lang="nl-nav">
                 <img src="assets/nl.svg" alt="Dutch">
               </a>
-              <a href="#" id="link-fr" data-lang="fr">
+              <a href="#" id="link-fr" data-lang="fr-nav">
                 <img src="assets/fr.svg" alt="French">
               </a>
             </div>
