--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -151,7 +151,7 @@
         <p data-i18n="initial.meeting.room.reserved">✅ Initial Meeting Room Reserved.</p>
         <p data-i18n="all.attendees.informed">✅ All Attendees Informed.</p>
         <p data-i18n="discard.message" style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; font-size:0.85em;">Now you can Press <strong>YES</strong> to Close and Discard.</p>
-        <button data-i18n="yes.button" class="ms-Button ms-Button--primary"><span class="ms-Button-label">Yes</span></button>
+        <button data-i18n="yes.button" id="confirmCloseYes" class="ms-Button ms-Button--primary"><span class="ms-Button-label">Yes</span></button>
         <button data-i18n="no.button" id="confirmCloseNo" class="ms-Button"><span class="ms-Button-label">No</span></button>
       </div>
     </div>
