--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -37,6 +37,14 @@
         </div>
         <div class="px-content">
           <!-- Wrapper per il form! -->
+         <label class="ms-Toggle">
+            <input type="checkbox" id="uatEnvToggle" checked>
+            <span class="ms-Toggle-field">UAT/PROD Enviroment</span>
+            <span class="tooltip">ℹ️
+                <span class="tooltiptext">Swithc Between DEV and UAT Enviroments</span>
+              </span>
+
+          </label>
           <div id="meetingFormSection">
             <form id="meetingForm">
               <div class="px-section">
