--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -39,9 +39,9 @@
           <!-- Wrapper per il form! -->
          <label class="ms-Toggle">
             <input type="checkbox" id="uatEnvToggle" checked>
-            <span class="ms-Toggle-field">UAT/PROD Enviroment</span>
+            <span class="ms-Toggle-field">UAT Enviroment</span>
             <span class="tooltip">ℹ️
-                <span class="tooltiptext">Swithc Between DEV and UAT Enviroments</span>
+                <span class="tooltiptext">Switch Between DEV and UAT Enviroments, Uncheck for DEV</span>
               </span>
 
           </label>
