--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -37,6 +37,7 @@
         </div>
         <div class="px-content">
           <!-- Wrapper per il form! -->
+        <div class="toggle-wrapper">
           <div class="toggle-container">
             <span class="toggle-label">DEV</span>
             <label class="switch">
@@ -44,10 +45,8 @@
               <span class="slider"></span>
             </label>
             <span class="toggle-label">UAT</span>
-            <span class="tooltip">ℹ️
-                <span class="tooltiptext">Switch Between DEV and UAT Enviroments</span>
-            </span>
           </div>
+        </div>
 
           <div id="meetingFormSection">
             <form id="meetingForm">
