--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -50,7 +50,7 @@
                 <input type="checkbox" id="devModeToggle">
                 <span class="ms-Toggle-field">DEV Mode</span>
                  <span class="tooltip">ℹ️
-                     <span class="tooltiptext">uncheck to view the payload before submitting</span>
+                     <span class="tooltiptext">Un-Check To View The Payload Before Submitting</span>
                 </span>
               </label>
               <div class="px-section">
