--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -35,12 +35,11 @@
           <!-- Wrapper per il form! -->
         <div class="toggle-wrapper">
           <div class="toggle-container">
-            <span class="toggle-label">DEV</span>
             <label class="switch">
               <input type="checkbox" id="uatEnvToggle" checked>
               <span class="slider"></span>
             </label>
-            <span class="toggle-label">UAT</span>
+            <span class="toggle-label uatEnvToggleText">UAT</span>
           </div>
         </div>
 
