--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -39,7 +39,7 @@
               <input type="checkbox" id="uatEnvToggle" checked>
               <span class="slider"></span>
             </label>
-            <span class="toggle-label uatEnvToggleText">UAT</span>
+            <span id="uatEnvToggleText" class="toggle-label">UAT</span>
           </div>
         </div>
 
