--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -18,6 +18,12 @@
         </div>
         <div class="px-section" style="text-align:right">
         <div id="language-bar">
+            
+            <div class="gear-button">
+                ⚙️
+                <span class="settings-text">Settings</span>
+            </div>
+
             <div id="language-bar">
               <a href="#" id="link-en" data-lang="en-nav">
                 <img src="assets/en.svg" alt="English">
