--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -19,7 +19,7 @@
         <div class="px-section" style="text-align:right">
         <div id="language-bar">
             
-            <div class="gear-button">
+            <div id="settings-gear-button" class="gear-button">
                 ⚙️
                 <span class="settings-text">Settings</span>
             </div>
