--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -174,6 +174,31 @@
         <button data-i18n="no.button" id="confirmCloseNo" class="ms-Button"><span class="ms-Button-label">No</span></button>
       </div>
     </div>
+
+    <!-- Overlay for The Settings -->
+    <div id="settingsOverlay" class="settings-overlay" style="display:none;">
+      <div class="confirm-box">
+        <h2>⚙️ Settings</h2>
+        
+          <div class="toggle-wrapper">
+          <div class="toggle-container">
+            <label class="switch">
+              <input type="checkbox" id="uatEnvToggle" checked>
+              <span class="slider"></span>
+            </label>
+            <span id="uatEnvToggleText" class="toggle-label">UAT</span>
+          </div>
+         </div>
+          
+        <label class="ms-Toggle">
+        <input type="checkbox" id="devModeToggle">
+            <span class="ms-Toggle-field">DEV Mode</span>
+             <span class="tooltip">ℹ️
+                 <span class="tooltiptext">Un-Check To View The Payload Before Submitting</span>
+            </span>
+        </label>
+      </div>
+    </div>
  <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
     <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
 </body>
