--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -176,7 +176,7 @@
     </div>
 
     <!-- Overlay for The Settings -->
-    <div id="settingsOverlay" class="settings-overlay" style="display:none;">
+    <div id="settingsOverlay" class="close-overlay settings-overlay" style="display:none;">
       <div class="confirm-box">
         <h2>⚙️ Settings</h2>
         
