--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -187,6 +187,8 @@
               <span class="slider"></span>
             </label>
             <span id="uatEnvToggleText" class="toggle-label">UAT</span>
+            <p style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; font-size:0.85em;"/p>
+            <button id="doneButton" class="ms-Button ms-Button--primary"><span class="ms-Button-label">Done</span></button>
           </div>
          </div>
           
