--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -179,7 +179,7 @@
     <div id="settingsOverlay" class="close-overlay settings-overlay" style="display:none;">
       <div class="confirm-box">
         <h2>⚙️ Settings</h2>
-         <span style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; font-size:0.85em;"></span>
+         <p style="border-top:1px solid #eee; padding-top:10px; font-size:0.85em;"></p>
           <div class="toggle-wrapper">
           <div class="toggle-container">
             <label class="switch">
@@ -197,8 +197,8 @@
                  <span class="tooltiptext">Un-Check To View The Payload Before Submitting</span>
             </span>
         </label>
-        <span style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; font-size:0.85em;"></span>
-        <button id="doneButton" class="ms-Button ms-Button--primary"><span class="ms-Button-label">Done</span></button>
+        <p style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; font-size:0.85em;"></p>
+        <button id="closeSeetingsButton" class="wide-button ms-Button ms-Button--primary"><span class="ms-Button-label">Close</span></button>
       </div>
     </div>
  <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
