--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -177,7 +177,7 @@
 
     <!-- Overlay for The Settings -->
     <div id="settingsOverlay" class="close-overlay settings-overlay" style="display:none;">
-      <div class="confirm-box">
+      <div class="confirm-box settings-box">
         <h2>⚙️ Settings</h2>
          <p style="border-top:1px solid #eee; padding-top:10px; font-size:0.85em;"></p>
           <div class="toggle-wrapper">
