--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -198,7 +198,7 @@
             </span>
         </label>
         <p style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; font-size:0.85em;"></p>
-        <button id="closeSeetingsButton" class="wide-button ms-Button ms-Button--primary"><span class="ms-Button-label">Close</span></button>
+        <button id="closeSettingsButton" class="wide-button ms-Button ms-Button--primary"><span class="ms-Button-label">Close</span></button>
       </div>
     </div>
  <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
