--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -39,7 +39,7 @@
         </div>
         <div class="px-content">
           <!-- Wrapper per il form! -->
-        <div class="toggle-wrapper">
+<!--         <div class="toggle-wrapper">
           <div class="toggle-container">
             <label class="switch">
               <input type="checkbox" id="uatEnvToggle" checked>
@@ -47,17 +47,17 @@
             </label>
             <span id="uatEnvToggleText" class="toggle-label">UAT</span>
           </div>
-         </div>
+         </div> -->
 
           <div id="meetingFormSection">
             <form id="meetingForm">
-            <label class="ms-Toggle">
+<!--             <label class="ms-Toggle">
                 <input type="checkbox" id="devModeToggle">
                 <span class="ms-Toggle-field">DEV Mode</span>
                  <span class="tooltip">ℹ️
                      <span class="tooltiptext">Un-Check To View The Payload Before Submitting</span>
                 </span>
-              </label>
+              </label> -->
               <div class="px-section">
                 <label data-i18n="building" class="ms-Label">Building</label>
                 <select class="ms-Dropdown-select" id="building">
