--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -11,7 +11,7 @@
     
 </head>
 <body class="ms-Fabric" dir="ltr">
-    <div class="px-card">
+    <div id="add-in-container" class="px-card red-gradient">
         <div class="px-header">
             <img src="assets/logo-proximus6.png" alt="Proximus Logo" class="px-logo" />
             <div data-i18n="app.title" class="px-title">OA Meeting Room Assistant</div>    
@@ -200,6 +200,9 @@
         <p style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; font-size:0.85em;"></p>
         <button id="closeSettingsButton" class="wide-button ms-Button ms-Button--primary"><span class="ms-Button-label">Close</span></button>
       </div>
+        <div id="env-bar-status">
+            <p id="env-status" class="env-status">UAT Enviroment</p>
+        </div>
     </div>
  <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
     <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
