--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -191,10 +191,10 @@
          </div>
           
         <label class="ms-Toggle">
-        <input type="checkbox" id="devModeToggle">
+        <input type="checkbox" id="devModeToggle" checked>
             <span class="ms-Toggle-field">DEV Mode</span>
              <span class="tooltip">ℹ️
-                 <span class="tooltiptext">Un-Check To View The Payload Before Submitting</span>
+                 <span class="tooltiptext">Un-Check To View The Request Payload Before Submitting</span>
             </span>
         </label>
         <p style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; font-size:0.85em;"></p>
