--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -115,7 +115,7 @@
                   </div>
                 </div>
               </div>
-              <button data-i18n="reserve.meeting.room.button" class="ms-Button ms-Button--primary" id="generateJson" type="button" style="margin-top: 16px; width: 100%;">
+              <button data-i18n="reserve.meeting.room.button" class="button-pxs ms-Button ms-Button--primary" id="generateJson" type="button" style="margin-top: 16px; width: 100%;">
                 <span class="ms-Button-label">Add your meeting room</span>
               </button>
               <pre data-i18n="creating.meeting.loading" id="jsonOutput"></pre>
