--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -21,7 +21,7 @@
             
             <div id="settings-gear-button" class="gear-button">
                 ⚙️
-                <span class="settings-text">Settings</span>
+<!--                 <span class="settings-text">Settings</span> -->
             </div>
 
             <div id="language-bar">
