--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -61,9 +61,8 @@
               <div class="px-section">
                 <label data-i18n="building" class="ms-Label">Building</label>
                 <select class="ms-Dropdown-select" id="building">
-                  <option value="Brussels - Towers or Boreal (02PLD)" selected>Brussels - Towers or Boreal (02PLD)</option>
-                  <option value="Evere">Evere</option>
-                  <option value="Liegi">Liegi</option>
+                  <option value="Tour & Taxi (02CMP)" selected>Tour & Taxi (02CMP)</option>
+                  <option value="Brussels - Towers or Boreal (02PLD)">Brussels - Towers or Boreal (02PLD)</option>
                 </select>
               </div>
 
