--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -61,7 +61,7 @@
               <div class="px-section">
                 <label data-i18n="building" class="ms-Label">Building</label>
                 <select class="ms-Dropdown-select" id="building">
-                  <option value="Tour & Taxi (02CMP)" selected>Tour & Taxi (02CMP)</option>
+                  <option value="Tour and Taxi (02CMP)" selected>Tour and Taxi (02CMP)</option>
                   <option value="Brussels - Towers or Boreal (02PLD)">Brussels - Towers or Boreal (02PLD)</option>
                 </select>
               </div>
