--- a/taskpaneSSO.new.html
+++ b/taskpaneSSO.new.html
@@ -151,8 +151,7 @@
     </div>
   </div>
 
-  <!-- Your existing script bundle should be included by your framework/build.
-       The JS relies on the IDs above and will work unchanged. -->
-  <!-- <script src="taskpaneSSO.js"></script> -->
+    <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
+    <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
 </body>
 </html>
