--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -149,7 +149,8 @@
       </div>
     </div>
   </div>
-
+   <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
+   <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
 
 </body>
 </html>
