--- a/taskpaneSSO.new.html
+++ b/taskpaneSSO.new.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OA Meeting Assistant</title>
 
-  <!-- Office.js will be provided by Outlook; if you load it here, keep the standard CDN: 
-       https://appsforoffice.microsoft.com/lib/1/hosted/office.js -->
+ <!-- <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script> -->
 
   <!-- Fabric/Fluent (optional, keeps checkbox typography compatible with your current build) -->
   <!-- <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css"> -->
@@ -150,8 +149,8 @@
       </div>
     </div>
   </div>
+   <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
+   <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
 
-    <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
-    <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
 </body>
 </html>
