--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OA Meeting Assistant</title>
 
- <!-- <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script> -->
+  <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>  
 
   <!-- Fabric/Fluent (optional, keeps checkbox typography compatible with your current build) -->
   <!-- <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css"> -->
