--- a/taskpaneSSO.html
+++ b/taskpaneSSO.html
@@ -28,7 +28,7 @@
     <form id="meetingForm" class="content" autocomplete="off">
       <!-- Building -->
       <div class="group">
-        <label for="building" class="group-title" data-i18n="label.building">Building</label>
+        <label data-i18n="building" class="ms-Label">Building</label>
         <select id="building">
           <!-- Options loaded elsewhere; keep an example for layout -->
           <option>Tour &amp; Taxi (02CMP)</option>
