--- a/taskpaneSSO.new.html
+++ b/taskpaneSSO.new.html
@@ -5,114 +5,120 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OA Meeting Assistant</title>
-
- <!-- <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script> -->
-
-  <!-- Fabric/Fluent (optional, keeps checkbox typography compatible with your current build) -->
-  <!-- <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css"> -->
-
+  <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
   <link rel="stylesheet" href="taskpane.css" />
 </head>
 <body class="ms-Fabric" dir="ltr">
   <div id="add-in-container" class="px-card green-gradient">
-    <!-- Header -->
     <div class="header">
       <div class="brand">
         <div class="logo">Px</div>
-        <div class="title" data-i18n="addon.title">OA Meeting Room Assistant</div>
+        <div class="title ms-Label" data-i18n="app.title">OA Meeting Room Assistant</div>
       </div>
       <button id="settings-gear-button" class="icon-btn" title="Settings" aria-label="Settings">⚙️</button>
     </div>
 
-    <!-- Main content -->
     <form id="meetingForm" class="content" autocomplete="off">
       <!-- Building -->
       <div class="group">
-        <label for="building" class="group-title" data-i18n="label.building">Building</label>
+        <label class="ms-Label" data-i18n="building">Building</label>
         <select id="building">
-          <!-- Options loaded elsewhere; keep an example for layout -->
           <option>Tour &amp; Taxi (02CMP)</option>
         </select>
       </div>
 
-      <!-- Business Unit (kept for retro-compat; auto-filled by JS) -->
-      <div class="group">
-        <label for="businessUnit" class="group-title" data-i18n="label.business.unit">Business Unit</label>
-        <input id="businessUnit" type="text" placeholder="INS" />
-        <div class="hint" data-i18n="hint.business.unit">Loaded automatically from your profile.</div>
+      <!-- Business Unit -->
+      <div class="group" style="max-width:200px;">
+        <label class="ms-Label" for="businessUnit" data-i18n="business.unit">Business Unit</label>
+        <input id="businessUnit" type="text" placeholder="INS" maxlength="30" />
       </div>
 
       <!-- Room amenities (dynamic; includes 'Additional Seats') -->
       <div class="group">
-        <div class="group-title" data-i18n="section.room.amenities">Room amenities</div>
+        <div class="ms-Label" data-i18n="room.amenities">Room Amenities</div>
         <div id="amenitiesContainer" aria-live="polite"></div>
       </div>
 
       <!-- Meeting Type -->
       <div class="group">
-        <div class="group-title" data-i18n="section.meeting.type">Meeting type</div>
+        <div class="ms-Label" data-i18n="meeting.type">Meeting Type</div>
         <div class="checks">
           <label class="ms-Checkbox">
             <input type="radio" name="meetingType" value="Hybrid" checked />
-            <span class="ms-Checkbox-label" data-i18n="meeting.type.hybrid">Hybrid</span>
+            <span class="ms-Checkbox-label" data-i18n="hybird">Hybrid</span>
           </label>
           <label class="ms-Checkbox">
             <input type="radio" name="meetingType" value="In Person" />
-            <span class="ms-Checkbox-label" data-i18n="meeting.type.inperson">In Person</span>
+            <span class="ms-Checkbox-label" data-i18n="in.person">In Person</span>
           </label>
         </div>
       </div>
 
       <!-- Toggles -->
-      <div class="group">
-        <div class="checks">
-          <label class="ms-Checkbox"><input id="isPrivate" type="checkbox" /> <span class="ms-Checkbox-label" data-i18n="label.private.meeting">Private meeting</span></label>
-          <label class="ms-Checkbox"><input id="onBehalfOf" type="checkbox" /> <span class="ms-Checkbox-label" data-i18n="label.on.behalf">On behalf of</span></label>
-        </div>
+      <div class="group" style="display:flex; gap:22px;">
+        <label class="ms-Checkbox">
+          <input id="isPrivate" type="checkbox" />
+          <span class="ms-Checkbox-label" data-i18n="private.meeting">Private Meeting</span>
+        </label>
+        <label class="ms-Checkbox">
+          <input id="onBehalfOf" type="checkbox" />
+          <span class="ms-Checkbox-label" data-i18n="on.behalf.of">On Behalf Of</span>
+        </label>
       </div>
 
       <!-- Extra time -->
       <div class="group">
-        <div class="group-title" data-i18n="section.extra.time">Extra time needed</div>
-        <div class="row">
-          <label class="inline-field">
-            <span data-i18n="label.before">Before</span>
-            <input id="extraTimeBefore" type="number" min="0" max="15" value="0" />
-          </label>
-          <label class="inline-field">
-            <span data-i18n="label.after">After</span>
-            <input id="extraTimeAfter" type="number" min="0" max="15" value="0" />
-          </label>
-          <div class="hint" style="flex:2" data-i18n="hint.minutes">min</div>
+        <div class="ms-Label" data-i18n="extra.time.needed">Extra Time Needed</div>
+        <div class="row" style="display:flex; gap:16px;">
+          <div>
+            <label data-i18n="extra.time.before" for="extraTimeBefore">Before</label>
+            <input id="extraTimeBefore" type="number" min="0" max="15" value="0" style="width:30px;" />
+            <span>min</span>
+          </div>
+          <div>
+            <label data-i18n="extra.time.after" for="extraTimeAfter">After</label>
+            <input id="extraTimeAfter" type="number" min="0" max="15" value="0" style="width:30px;" />
+            <span>min</span>
+          </div>
         </div>
       </div>
 
       <!-- CTA -->
-      <div class="cta">
-        <button id="generateJson" type="button" class="btn btn-primary" data-i18n="reserve.meeting.room.button">Find meeting room</button>
-        <pre id="jsonOutput" aria-live="polite"></pre>
-      </div>
+      <button id="generateJson" type="button" class="btn btn-primary ms-Button ms-Button--primary" data-i18n="reserve.meeting.room.button" style="margin-top: 16px; width: 100%;">
+        <span class="ms-Button-label">Book &amp; Reserve Meeting Room</span>
+      </button>
+      <pre id="jsonOutput" aria-live="polite" data-i18n="creating.meeting.loading"></pre>
     </form>
 
     <!-- Confirmation step (used by JS) -->
-    <section id="confirmationSection" class="confirm-card" style="display:none">
-      <div><span data-i18n="label.placeholder">Placeholder:</span> <span id="placeholderRoomName" class="confirm-name">Room XYZ</span></div>
-      <div id="confirmationStatus" class="hint" style="margin-top:6px"></div>
-      <div id="confirmCancelBtns" class="confirm-actions">
-        <button id="confirmBtn" class="btn btn-primary" type="button" data-i18n="confirm.button">Confirm</button>
-        <button id="cancelBtn" class="btn btn-outline" type="button" data-i18n="cancel.button">Cancel</button>
-      </div>
-      <div id="backBtnDiv" class="confirm-actions" style="display:none">
-        <button id="backBtn" class="btn btn-outline" type="button" data-i18n="back.to.form">Back to form</button>
-      </div>
-      <!-- Hidden fields populated by JS -->
+    <section id="confirmationSection" class="confirm-card" style="display:none; padding:24px;">
       <input type="hidden" id="confirmEventID" />
       <input type="hidden" id="confirmDataverseID" />
       <input type="hidden" id="confirmIcalUid" />
       <input type="hidden" id="organizerResponse" />
+      <div class="ms-font-m-plus" id="confirmationMessage" style="margin-bottom:16px;">
+        <span data-i18n="placeholder.message">A placeholder has been created and the meeting room</span>
+        <span id="placeholderRoomName" style="color:#5C2D91;font-weight:600"></span>
+        <span data-i18n="15.minutes.confirmation">is reserved for 15 minutes.</span>
+        <span data-i18n="confirm.cancel.message01">Please confirm or cancel your reservation.</span>
+        <span data-i18n="confirm.cancel.message02" style="font-size:0.97em;color:#444">At this moment the meeting is only visible for you, if you confirm it will be shared to all the attendees.</span>
+      </div>
+      <div id="confirmCancelBtns" style="margin:28px 0 16px 0;">
+        <button id="confirmBtn" class="ms-Button ms-Button--primary" style="min-width:110px;margin-right:18px;">
+          <span data-i18n="confirm.button" class="ms-Button-label">Confirm</span>
+        </button>
+        <button id="cancelBtn" class="ms-Button" style="min-width:110px;">
+          <span data-i18n="cancel.button" class="ms-Button-label">Cancel</span>
+        </button>
+      </div>
+      <div id="confirmationStatus" data-i18n="confirmation.message" style="margin-top:24px;min-height:24px;font-size:1.08em;"></div>
+      <div id="backBtnDiv" style="display:none; margin-top:20px;">
+        <button id="backBtn" class="ms-Button"><span data-i18n="back.button" class="ms-Button-label">Back</span></button>
+        <button id="closeEventPlannerWindow" class="ms-Button"><span data-i18n="close.button" class="ms-Button-label">Close</span></button>
+      </div>
+      <div data-i18n="footer.text" style="border-top:1px solid #eee; margin-top:30px; padding-top:10px; color:#888; font-size:0.85em;">© Proximus.com — All rights reserved. Empowering your productivity.</div>
     </section>
 
-    <!-- Bottom environment bar (kept for JS compatibility) -->
     <div class="env-bar"><span class="env-dot"></span><span id="env-status">DEV Environment</span></div>
   </div>
 
@@ -120,12 +126,12 @@
   <div id="settingsOverlay" class="overlay" role="dialog" aria-modal="true" aria-labelledby="settingsTitle">
     <div class="panel">
       <div class="head">
-        <div id="settingsTitle" class="title" data-i18n="settings.title">Settings</div>
+        <div id="settingsTitle" class="title">Settings</div>
         <button id="closeSettingsButton" class="icon-btn" aria-label="Close">✖</button>
       </div>
       <div class="body">
         <div class="group">
-          <div class="group-title" data-i18n="settings.language">Language</div>
+          <div class="ms-Label">Language</div>
           <nav id="language-bar" class="lang-bar">
             <a id="link-en" data-lang="en">EN</a>
             <a id="link-nl" data-lang="nl">NL</a>
@@ -133,24 +139,15 @@
           </nav>
         </div>
         <div class="group">
-          <div class="group-title" data-i18n="settings.environment">Environment</div>
-          <div class="toggle">
-            <span data-i18n="settings.uat">UAT</span>
-            <label>
-              <input id="uatEnvToggle" type="checkbox" checked />
-              <span id="uatEnvToggleText">UAT</span>
-            </label>
-          </div>
-          <div class="toggle">
-            <span data-i18n="settings.dev.mode">Developer mode</span>
-            <label><input id="devModeToggle" type="checkbox" /> <span>Off</span></label>
-          </div>
+          <div class="ms-Label">Environment</div>
+          <div class="toggle"><span>UAT</span><label><input id="uatEnvToggle" type="checkbox" checked /> <span id="uatEnvToggleText">UAT</span></label></div>
+          <div class="toggle"><span>Developer mode</span><label><input id="devModeToggle" type="checkbox" /> <span>Off</span></label></div>
         </div>
       </div>
     </div>
   </div>
-   <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
-   <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
 
+  <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/controls/config.js"></script>
+  <script src="https://proximuscorp.sharepoint.com/:i:/r/sites/TS2110913/Shared%20Documents/OAMeetingAssistant/javascript/taskpaneSSO.js"></script>
 </body>
 </html>
